# dhallia

./: .gitignore  ChangeLog.md  LICENSE  README.md  dhallia.cabal  shell.nix  test-server.hs
app/: server.hs
config/: api.dhall  c2.dhall  c3.dhall  c4.dhall  combinator-io.dhall  combinator-tree.dhall  combinator.dhall  combinator2.dhall  combinator3.dhall  combinator_pseudo.dhall  example.dhall  existential.dhall  justrun.dhall  load.dhall  play.hs  request.dhall  response.dhall
examples/: cat-facts.dhall  metaweather.dhall
src/: API.hs  BuiltinHTTP.hs  CallAPI.hs  Repl.hs
src/Dhallia/: API.hs  Cache.hs  Check.hs  Expr.hs  Prelude.hs
src/Dhallia/Cache/: InMemory.hs
src/Dhallia/Interpreter/: HTTPClient.hs  Repl.hs
