name:               dhallia
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
author:             Gregory.Hale
maintainer:         Gregory.Hale@target.com
build-type:         Simple
extra-source-files: ChangeLog.md
cabal-version:      >= 1.10

library
  exposed-modules:  Dhallia.API
                    Dhallia.Cache
                    Dhallia.Cache.InMemory
                    Dhallia.Check
                    Dhallia.Expr
                    Dhallia.Interpreter.HTTPClient
                    Dhallia.Interpreter.Repl
  hs-source-dirs:   src
  build-depends:    base             >= 4.11 && < 4.13
                  , aeson
                  , algebraic-graphs
                  , bytestring
                  , containers
                  , dhall            >= 1.26.0
                  , dhall-json
                  , http-client
                  , http-client-tls
                  , lens-family-core
                  , mtl
                  , haskeline
                  , repline
                  , row-types
                  , text
                  , time
  default-language: Haskell2010

executable test-server
  main-is:          server.hs
  hs-source-dirs:   app
  build-depends:    base, aeson, snap-core, snap-server, text, bytestring, case-insensitive
  default-language: Haskell2010
